ztd-inner/ui/struct_skip.stderr
error[E0609]: no field `field` on type `StructInner`
  --> ui/struct_skip.rs:16:21
   |
16 |     }).into_inner().field;
   |                     ^^^^^ unknown field
